# sv-parser

.github/workflows/: mayhem.yml  sync.yml
mayhem/: Dockerfile  Mayhemfile  build.sh  parse_sv.mayhemfile  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: parse_sv.rs
mayhem/parse-sv/testsuite/: iface.sv  param.sv  simple_assign.sv
sv-parser/fuzz/: Cargo.toml
sv-parser/fuzz/fuzz_targets/: parse_sv.rs
